# starter-backend-template

./: .dockerignore  .env.example  .env.observability.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  PROJECT_STATUS.md  README.md  ROADMAP.md  TECH_DEBT.md  TEMPLATE_FREEZE_CHECKLIST.md  alembic.ini  docker-compose.observability.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
.ai-rules/: agent-orchestration.md  api.md  architecture.md  backend.md  context-map.md  database.md  docker.md  documentation.md  git.md  incremental-work.md  planning-and-task-breakdown.md  repository.md  review.md  security.md  spec-driven-development.md  tdd-and-regression.md  template-onboarding.md  tenancy.md  testing.md  threat-modeling.md  workers.md
.commands/: build-next-roadmap-task.md  builder-handoff.md  plan.md  review-current-branch.md  security-audit.md  spec.md  template-onboard.md  two-agent-review.md  update-project-status.md
agents/: backend-reviewer.md  database-reviewer.md  devops-ci-reviewer.md  security-auditor.md  template-onboarding-agent.md  tenancy-reviewer.md
alembic/: env.py
app/: main.py  seed_default_tenant.py  seed_dev_data.py  worker.py  worker_failed_jobs.py
docs/: ai-workflows.md  backup-restore-automation.md  ci-policy-guards.md  database-backup-restore.md  file-upload-production.md  legacy-route-deprecation.md  load-concurrency-testing.md  malware-scanning.md  migration-rollback.md  observability-production.md  pitr-and-scheduled-backups.md  platform-admin-model.md  production-deployment.md  production-runtime-examples.md  redis-production-contract.md  sync-scaling-benchmark.md  template-onboarding.md  template-usage.md  tenant-isolation.md  troubleshooting.md  two-agent-review-workflow.md  (+1 more)
perf/: README.md  (+3 more)
(+178 files in other folders)
