[project]
name = "starter-backend-template"
version = "0.1.0"
description = "Production-oriented FastAPI backend template."
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "psycopg2-binary",
    "pytest",
    "pydantic-settings",
    "httpx",
    "alembic",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "python-multipart",
    "email-validator",
    "bcrypt==4.0.1",
    "ruff",
    "pre-commit",
    "redis==8.0.0",
]

[tool.uv]
package = false
